Add test for Spinner